Sheet CSS tweaks and phrase reference's last beat wrapping fix.

--- a/index.css
+++ b/index.css
@@ -140,6 +140,10 @@ h1 {
   border:0;
 }
 
+#addphrase > div > input {
+  font-size:inherit
+}
+
 .windowphrasealias {
   display:inline-block;
   vertical-align:top;
